--- a/front/index.html
+++ b/front/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/sslogo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/front/src/assets/sslogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Servicio Social Tec de Monterrey</title>
   </head>
